--- a/project/PSM.html
+++ b/project/PSM.html
@@ -115,7 +115,7 @@
                 <div>Dr.P.Sushma</div>
             </div>
             <div style="text-align: center;"><button class="button">View Status</button></div>
+        </div>
     </div>
-    
 </body>
 </html>
